# ripsync

./: .gitignore  .npmignore  README.md  cli.js  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
p2p-frontend-setup/app/receive/: page.tsx
p2p-frontend-setup/app/send/: page.tsx
template/: package.json  run.js  setup.js
template/backend/: Cargo.toml
template/backend/src/: main.rs
template/p2p-frontend-setup/: package-lock.json  package.json  server.js
template/p2p-frontend-setup/app/: layout.tsx
template/p2p-frontend-setup/app/receive/: page.tsx
template/p2p-frontend-setup/app/send/: page.tsx
