[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
dotenv = "0.15"

# TLS dependencies
tokio-rustls = "0.26.2"
rustls = "0.23.27"
rustls-pemfile = "2.2.0"
hyper = "1.6.0"
hyper-util = "0.1.12"
tower = "0.5.2"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }

